--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@mantine/prism": "4.2.2",
     "@modulz/radix-icons": "^4.0.0",
     "@next/bundle-analyzer": "^12.1.4",
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
+    "mongoose": "^6.3.3",
     "next": "12.1.4",
     "prism-react-renderer": "^1.3.1",
     "react": "18.1.0",
