--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@modulz/radix-icons": "^4.0.0",
     "@next/bundle-analyzer": "^12.1.4",
     "@types/bcryptjs": "^2.4.2",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
     "mongoose": "^6.3.3",
     "next": "12.1.4",
     "prism-react-renderer": "^1.3.1",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "tabler-icons-react": "^1.47.0"
   },
   "devDependencies": {
